cmake_minimum_required(VERSION 3.13)
project(atcoder)

set(CMAKE_CXX_STANDARD 14)

add_executable(atcoder
        ABC/newYear.cpp
        beginners/ex04.cpp
        beginners/ex05.cpp
        beginners/ex06.cpp
        beginners/ex07.cpp
        beginners/ex08.cpp
        beginners/ex09.cpp
        beginners/ex10.cpp
        beginners/ex11.cpp
        beginners/ex12.cpp
        beginners/ex13.cpp
        beginners/ex14.cpp
        beginners/ex15.cpp
        beginners/hello.cpp
        practice/practice.cpp
        hello.cpp)
